# HWC

./: CMakeLists.txt  Makefile
LFU/: Makefile
LFU/include/: LFU_cache.h
LFU/src/: LFU_Cache.cpp
include/: LFU_cache.h
perfect_caching/: Makefile
perfect_caching/include/: perfect_caching.h
perfect_caching/src/: perfect_caching.cpp
src/: LFU_Cache.cpp
